[package]
name = "gdkx11"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["gdkx11", "gdk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/docs/gdkx11/"
version = "0.9.0"
description = "Rust bindings for the GDK X11 library"
repository = "https://github.com/gtk-rs/gdkx11"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/gdkx11", service = "github" }
travis-ci = { repository = "gtk-rs/gdkx11" }

[lib]
name = "gdkx11"

[features]
purge-lgpl-docs = ["gtk-rs-lgpl-docs", "gdk/purge-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs", "gdk/embed-lgpl-docs"]
dox = ["gdk/dox"]
v3_16 = ["gdkx11-sys/v3_16", "gdk/v3_16"]
v3_22 = ["v3_16", "gdkx11-sys/v3_22", "gdk/v3_22"]
v3_24 = ["v3_22", "gdkx11-sys/v3_24_2"]

[build-dependencies.gtk-rs-lgpl-docs]
optional = true
git = "https://github.com/gtk-rs/lgpl-docs"

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
x11 = "2.18"

[dependencies.gdkx11-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gdk-pixbuf"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dev-dependencies]
gir-format-check = "^0.1"
