[workspace]
members = [
  "atk",
  "atk/sys",
  "cairo",
  "cairo/sys",
  "gdk",
  "gdk/sys",
  "gdk-pixbuf",
  "gdk-pixbuf/sys",
  "gdkx11",
  "gdkx11/sys",
  "gio",
  "gio/sys",
  "gio-macros",
  "glib",
  "glib/gobject-sys",
  "glib/sys",
  "glib-macros",
  "graphene",
  "graphene/sys",
  "gtk",
  "gtk/sys",
  "gtk3-macros",
  "examples",
  "pango",
  "pango/sys",
  "pangocairo",
  "pangocairo/sys",
]

exclude = ["gir", "checker"]
