[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v2_30 = []
v2_32 = ["v2_30"]
dox = []

[lib]
name = "atk_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libatk-1"
homepage = "http://gtk-rs.org/"
keywords = ["atk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "atk"
name = "atk-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.9.0"
[package.metadata.docs.rs]
features = ["dox"]
