[build-dependencies]
system-deps = "1.3"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v2_30 = []
v2_32 = ["v2_30"]
v2_34 = ["v2_32"]
dox = []

[lib]
name = "atk_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libatk-1"
homepage = "http://gtk-rs.org/"
keywords = ["atk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "atk"
name = "atk-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.10.0"

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps.atk]
name = "atk"
version = "2.14"

[package.metadata.system-deps.atk.feature-versions]
v2_30 = "2.30"
v2_32 = "2.32"
v2_34 = "2.34"
