[package]
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/atk/"
categories = ["api-bindings", "gui"]
license = "MIT"
description = "Rust bindings for the ATK library"
name = "atk"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
readme = "README.md"
version = "0.15.1"
keywords = ["atk", "gtk-rs", "gnome", "accessibility"]
repository = "https://github.com/gtk-rs/gtk3-rs"
exclude = [
    "gir-files/*",
]
edition = "2021"
rust-version = "1.56"

[lib]
name = "atk"

[features]
dox = ["ffi/dox"]
v2_30 = ["ffi/v2_30"]
v2_32 = ["v2_30", "ffi/v2_32"]
v2_34 = ["v2_32", "ffi/v2_34"]
v2_38 = ["v2_34", "ffi/v2_38"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
ffi = {package = "atk-sys", path = "sys", version = "0.15.1"}
glib = { version = "0.15.1", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15" }

[dev-dependencies]
gir-format-check = "^0.1"
