[package]
name = "cairo-sys-rs"
version = "0.3.3"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
links = "cairo"

description = "FFI bindings to libcairo"
repository = "https://github.com/gtk-rs/cairo"
license = "MIT"
homepage = "http://gtk-rs.org/"

keywords = ["cairo", "ffi", "gtk-rs", "gnome"]

[lib]
name = "cairo_sys"

[features]
png = []
xlib = ["x11"]
xcb = []
v1_12 = []
v1_14 = ["v1_12"]

[dependencies]
libc = "0.2"
x11 = { version = "2.6.1", features = ["xlib"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.2.7"

[build-dependencies]
pkg-config = "0.3.7"
