[package]
name = "cairo-sys-rs"
license = "MIT"
links = "cairo"
authors = ["The Gtk-rs Project Developers"]
homepage = "http://gtk-rs.org/"
description = "FFI bindings to libcairo"
version = "0.6.0"
keywords = ["cairo", "ffi", "gtk-rs", "gnome"]
repository = "https://github.com/gtk-rs/cairo"
build = "build.rs"

[lib]
name = "cairo_sys"

[features]
dox = ["x11/dox"]
v1_12 = []
v1_14 = ["v1_12"]
xlib = ["x11"]
png = []
xcb = []

[dependencies]
x11 = { version = "2.16", features = ["xlib"], optional = true }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.2", features = ["windef"] }

[build-dependencies]
pkg-config = "0.3.7"
