[package]
name = "cairo-sys-rs"
license = "MIT"
links = "cairo"
authors = ["The Gtk-rs Project Developers"]
homepage = "http://gtk-rs.org/"
description = "FFI bindings to libcairo"
version = "0.9.2"
keywords = ["cairo", "ffi", "gtk-rs", "gnome"]
repository = "https://github.com/gtk-rs/cairo"
build = "build.rs"

[lib]
name = "cairo_sys"

[features]
dox = ["x11/dox"]
v1_14 = []
v1_16 = ["v1_14"]
xlib = ["x11"]
png = []
pdf = []
svg = []
ps = []
freetype = []
xcb = []
use_glib = ["glib-sys"]
win32-surface = ["winapi"]

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
optional = true
git = "https://github.com/gtk-rs/sys"

[dependencies.x11]
optional = true
version = "2.16"
features = ["xlib"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.2", features = ["windef"], optional = true }

[build-dependencies]
pkg-config = "0.3.7"
