[package]
name = "cairo-rs"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["cairo", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/docs/cairo/"
version = "0.9.0"
description = "Rust bindings for the Cairo library"
repository = "https://github.com/gtk-rs/gtk-rs"
build = "build.rs"

[badges]
appveyor = { repository = "GuillaumeGomez/cairo", service = "github" }
travis-ci = { repository = "gtk-rs/cairo" }

[lib]
name = "cairo"

[features]
purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
png = ["cairo-sys-rs/png"]
pdf = ["cairo-sys-rs/pdf"]
svg = ["cairo-sys-rs/svg"]
ps = ["cairo-sys-rs/ps"]
use_glib = ["glib", "glib-sys", "gobject-sys", "cairo-sys-rs/use_glib"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
v1_14 = ["cairo-sys-rs/v1_14"]
v1_16 = ["v1_14", "cairo-sys-rs/v1_16"]
default = ["use_glib", "freetype"]
freetype = ["cairo-sys-rs/freetype", "freetype-crate"]
script = ["cairo-sys-rs/script"]
xcb = ["cairo-sys-rs/xcb"]
xlib = ["cairo-sys-rs/xlib"]
dox = ["cairo-sys-rs/dox", "glib/dox"]
win32-surface = ["cairo-sys-rs/win32-surface"]

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1.8"
optional = true
git = "https://github.com/gtk-rs/lgpl-docs"

[dependencies.cairo-sys-rs]
path = "sys"

[dependencies.glib]
optional = true
path = "../glib"

[dependencies.glib-sys]
optional = true
path = "../glib/sys"

[dependencies.gobject-sys]
optional = true
path = "../glib/gobject-sys"

[dependencies.freetype-crate]
package = "freetype"
version = "0.7.0"
optional = true

[dependencies]
libc = "0.2"
bitflags = "1.0"
thiserror = "1.0.10"

[dev-dependencies]
tempfile = "3.0"
