[package]
name = "cairo-rs"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["cairo", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/docs/cairo/"
version = "0.13.0"
description = "Rust bindings for the Cairo library"
repository = "https://github.com/gtk-rs/gtk-rs"
build = "build.rs"
edition = "2018"

[lib]
name = "cairo"

[features]
purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
png = ["ffi/png"]
pdf = ["ffi/pdf"]
svg = ["ffi/svg"]
ps = ["ffi/ps"]
use_glib = ["glib", "ffi/use_glib"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
v1_14 = ["ffi/v1_14"]
v1_16 = ["v1_14", "ffi/v1_16"]
default = ["use_glib"]
freetype = ["ffi/freetype", "freetype-crate"]
script = ["ffi/script"]
xcb = ["ffi/xcb"]
xlib = ["ffi/xlib"]
dox = ["ffi/dox", "glib/dox", "freetype"]
win32-surface = ["ffi/win32-surface"]

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1.8"
optional = true
git = "https://github.com/gtk-rs/lgpl-docs"

[dependencies.ffi]
package = "cairo-sys-rs"
path = "sys"

[dependencies.glib]
optional = true
path = "../glib"

[dependencies.freetype-crate]
package = "freetype"
version = "0.7.0"
optional = true

[dependencies]
libc = "0.2"
bitflags = "1.0"
thiserror = "1.0.10"

[dev-dependencies]
tempfile = "3.0"
