[package]
name = "gtk-rs-examples"
version = "0.0.1"
authors = ["The Gtk-rs Project Developers"]
edition = "2018"

[dependencies]
chrono = "0.4"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
once_cell = "1.2.0"

[dependencies.gtk]
path = "../gtk"

[dependencies.pangocairo]
path = "../pangocairo"
optional = true

[dependencies.cairo]
package = "cairo-rs"
path = "../cairo"
features = ["png"]
optional = true

[dependencies.async-tls]
version = "0.11"
optional = true

[build-dependencies.gio]
path = "../gio"

[[bin]]
name = "cairo_png"
required-features = ["cairo"]

[[bin]]
name = "listbox_model"
required-features = ["gtk/v3_16"]

[[bin]]
name = "printing"
required-features = ["pangocairo"]

[[bin]]
name = "gio_async_tls"
required-features = ["async-tls"]
