[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
path = "../gio-sys"
version = "0.6.0"

[dependencies.glib-sys]
path = "../glib-sys"
version = "0.6.0"

[dependencies.gobject-sys]
path = "../gobject-sys"
version = "0.6.0"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v2_28 = []
v2_30 = ["v2_28"]
v2_32 = ["v2_30"]
v2_36 = ["v2_32"]
v2_36_8 = ["v2_36"]

[lib]
name = "gdk_pixbuf_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgdk_pixbuf-2.0"
homepage = "http://gtk-rs.org/"
keywords = ["gdk-pixbuf", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gdk_pixbuf"
name = "gdk-pixbuf-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.6.0"
