[build-dependencies]
system-deps = "1.3"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
path = "../gio-sys"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v2_32 = []
v2_36 = ["v2_32"]
v2_36_8 = ["v2_36"]
v2_40 = ["v2_36_8"]
dox = []

[lib]
name = "gdk_pixbuf_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgdk_pixbuf-2.0"
homepage = "http://gtk-rs.org/"
keywords = ["gdk-pixbuf", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gdk_pixbuf"
name = "gdk-pixbuf-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.10.0"

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps.gdk_pixbuf_2_0]
name = "gdk-pixbuf-2.0"
version = "2.30"

[package.metadata.system-deps.gdk_pixbuf_2_0.feature-versions]
v2_32 = "2.32"
v2_36 = "2.36"
v2_36_8 = "2.36.8"
v2_40 = "2.40"
