[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"
bitflags = "0.9"

[dependencies.cairo-sys-rs]
version = "0.4.0"
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk-pixbuf-sys]
version = "0.4.0"
path = "../gdk-pixbuf-sys"

[dependencies.gio-sys]
version = "0.4.0"
path = "../gio-sys"

[dependencies.glib-sys]
version = "0.4.0"
path = "../glib-sys"

[dependencies.gobject-sys]
version = "0.4.0"
path = "../gobject-sys"

[dependencies.pango-sys]
version = "0.4.0"
path = "../pango-sys"

[features]
v3_20 = ["v3_18"]
v3_6 = []
v3_18 = ["v3_16"]
v3_22 = ["v3_20"]
v3_12 = ["v3_10"]
v3_8 = ["v3_6"]
v3_16 = ["v3_14"]
v3_10 = ["v3_8"]
v3_14 = ["v3_12"]

[lib]
name = "gdk_sys"

[package]
name = "gdk-sys"
license = "MIT"
homepage = "http://gtk-rs.org/"
links = "gdk"
authors = ["The Gtk-rs Project Developers"]
description = "FFI bindings to libgdk-3"
version = "0.4.0"
keywords = ["gdk", "ffi", "gtk-rs", "gnome"]
repository = "https://github.com/gtk-rs/sys"
build = "build.rs"