[package]
name = "gdk"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
keywords = ["gdk", "gtk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gdk/"
version = "0.18.0"
description = "Rust bindings for the GDK 3 library"
repository = "https://github.com/gtk-rs/gtk3-rs"
exclude = [
    "gir-files/*",
]
edition = "2021"
rust-version = "1.64"

[lib]
name = "gdk"

[features]
v3_24 = ["ffi/v3_24"]
dox = ["ffi/dox", "glib/dox", "gio/dox", "gdk-pixbuf/dox", "cairo-rs/dox", "pango/dox"]
unsafe-assume-initialized = []

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
ffi = { package = "gdk-sys", path = "sys" }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }

[dev-dependencies]
gir-format-check = "^0.1"
