[package]
authors = ["The gtk-rs Project Developers"]
description = "Rust bindings of the GDK-Wayland 3 library"
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gdk_wayland/"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gdk", "gdk-wayland", "gtk-rs", "gnome", "GUI"]
license = "MIT"
name = "gdkwayland"
readme = "README.md"
repository = "https://github.com/gtk-rs/gtk3-rs"
version = "0.15.4"
rust-version = "1.56"

[features]
v3_20 = ["ffi/v3_20", "gdk/v3_20"]
v3_22 = ["v3_20", "ffi/v3_22", "gdk/v3_22"]
v3_24 = ["v3_22", "ffi/v3_24", "gdk/v3_24"]
v3_24_22 = ["v3_24", "ffi/v3_24_22"]
dox = ["ffi/dox"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
ffi = {path = "./sys", package = "gdkwayland-sys", version = "0.15.1"}
gdk = {path = "../gdk", version = "0.15.1"}
glib = { version = "0.15.1", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15" }
libc = "0.2"
wayland-client = {version = "0.29", features = ["use_system_lib"]}

[dev-dependencies]
gir-format-check = "^0.1"
