[package]
authors = ["The gtk-rs Project Developers"]
description = "Rust bindings of the GDK-Wayland 3 library"
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gdkwayland/"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gdk", "gdk-wayland", "gtk-rs", "gnome", "GUI"]
license = "MIT"
name = "gdkwayland"
readme = "README.md"
repository = "https://github.com/gtk-rs/gtk3-rs"
version = "0.18.0"
rust-version = "1.70"

[features]
v3_24 = ["ffi/v3_24", "gdk/v3_24"]
v3_24_22 = ["v3_24", "ffi/v3_24_22"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
ffi = { version = "0.18", path = "./sys", package = "gdkwayland-sys" }
gdk = { version = "0.18", path = "../gdk" }
glib = { branch = "0.18", version = "0.18", git = "https://github.com/gtk-rs/gtk-rs-core" }
libc = "0.2"
wayland-client = "0.30"
wayland-backend = { version = "0.1", features = ["client_system"] }

[dev-dependencies]
gir-format-check = "^0.1"
