[package]
authors = ["The Gtk-rs Project Developers"]
description = "FFI binding for libgdkx11"
homepage = "http://gtk-rs.org/"
keywords = ["gdkx11", "ffi", "gtk-rs", "gnome"]
license = "MIT"
repository = "https://github.com/gtk-rs/sys"
name = "gdkx11-sys"
version = "0.10.0"
links = "gdk_x11"
build = "build.rs"
edition = "2018"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.gdk_x11_3_0]
name = "gdk-x11-3.0"
version = "3.14"

[package.metadata.system-deps.gdk_x11_3_0.feature-versions]
v3_16 = "3.16"
v3_24 = "3.24"
v3_24_2 = "3.24.2"

[lib]
name = "gdk_x11_sys"

[dependencies]
libc = "0.2"
x11 = "2.18"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.cairo]
package = "cairo-sys-rs"
git = "https://github.com/gtk-rs/cairo"
optional = true

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v3_16 = []
v3_24 = ["v3_16"]
v3_24_2 = ["v3_24", "cairo"]
dox = []
