[package]
name = "gdkx11"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
keywords = ["gdkx11", "gdk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gdkx11/"
version = "0.15.1"
description = "Rust bindings for the GDK X11 library"
repository = "https://github.com/gtk-rs/gtk3-rs"
exclude = [
    "gir-files/*",
]
edition = "2021"
rust-version = "1.56"

[lib]
name = "gdkx11"

[features]
dox = ["gdk/dox", "ffi/dox"]
v3_20 = ["gdk_v3_20"]
v3_22 = ["ffi/v3_22", "gdk/v3_22"]
v3_24 = ["v3_22", "ffi/v3_24_2"]
gdk_v3_20 = ["gdk/v3_20"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
x11 = "2.18"
ffi = {package = "gdkx11-sys", path = "sys", version = "0.15.1"}
glib = "0.15.1"
gdk = {path = "../gdk", version = "0.15.1"}
gio = "0.15.1"

[dev-dependencies]
gir-format-check = "^0.1"
