[package]
name = "gdkx11"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
keywords = ["gdkx11", "gdk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gdkx11/"
version = "0.16.0"
description = "Rust bindings for the GDK X11 library"
repository = "https://github.com/gtk-rs/gtk3-rs"
exclude = ["gir-files/*"]
edition = "2021"
rust-version = "1.63"

[lib]
name = "gdkx11"

[features]
dox = ["x11/dox", "glib/dox", "gdk/dox", "gio/dox", "ffi/dox"]
v3_24 = ["ffi/v3_24_2"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
x11 = "2.18"
ffi = { package = "gdkx11-sys", path = "sys", version = "0.16" }
glib = { version = "0.16", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16" }
gdk = { path = "../gdk", version = "0.16" }
gio = { version = "0.16", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16" }

[dev-dependencies]
gir-format-check = "^0.1"
