[build-dependencies]
system-deps = "1.3"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = ["ws2def", "winsock2"]

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v2_44 = []
v2_46 = ["v2_44"]
v2_48 = ["v2_46"]
v2_50 = ["v2_48"]
v2_52 = ["v2_50"]
v2_54 = ["v2_52"]
v2_56 = ["v2_54"]
v2_58 = ["v2_56"]
v2_60 = ["v2_58"]
v2_62 = ["v2_60"]
v2_64 = ["v2_62"]
dox = []

[lib]
name = "gio_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgio-2.0"
homepage = "http://gtk-rs.org/"
keywords = ["gio", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gio"
name = "gio-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.10.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.gio_2_0]
name = "gio-2.0"
version = "2.42"

[package.metadata.system-deps.gio_2_0.feature-versions]
v2_44 = "2.44"
v2_46 = "2.46"
v2_48 = "2.48"
v2_50 = "2.50"
v2_52 = "2.52"
v2_54 = "2.54"
v2_56 = "2.56"
v2_58 = "2.58"
v2_60 = "2.60"
v2_62 = "2.62"
v2_64 = "2.64"
